--- a/semaforo/index.html
+++ b/semaforo/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Semáforo</title>
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
-    
+    <main>
+        <div>
+            <img src="img/desligado.png" id="img" alt="semaforo">
+        </div>
+        <div id="buttons">
+            <button id="red" class="botao">Vermelho</button>
+            <button id="yellow" class="botao">Amarelo</button>
+            <button id="green" class="botao">Verde</button>
+            <button id="automatic" class="botao">Automático</button>
+        </div>
+    </main>
+    <script src="semaforo.js"></script>
 </body>
 </html>
