--- a/trocador-de-cor/index.html
+++ b/trocador-de-cor/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Viewport:  -->
+    <!-- Viewport: controla o layout, scale.1.0: zoom da page  -->
     <title>Trocador de cores</title>
     <link rel="stylesheet" href="style.css">
     <!-- No head são dados que não são exibidos -->
