Criando o array com as imagens

--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slideshow</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container-slide">
+        <div class="action-button" id="previous">&laquo;</div>
+        <div class="container-items"></div>
+        <div class="action-button">&raquo;</div>
+
+    </div>
+    <script src="slideshow.js"></script>
 </body>
 </html>
