Carregando as imagens, através de uma função

--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -9,9 +9,8 @@
 <body>
     <div class="container-slide">
         <div class="action-button" id="previous">&laquo;</div>
-        <div class="container-items"></div>
+        <div id="container-items"></div>
         <div class="action-button">&raquo;</div>
-
     </div>
     <script src="slideshow.js"></script>
 </body>
