--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container-slide">
         <div class="action-button" id="previous">&laquo;</div>
-        <div id="container-items"></div>
+        <div class="container-items" id="container-items"></div>
         <div class="action-button">&raquo;</div>
     </div>
     <script src="slideshow.js"></script>
